2009-10-30  Oliver Hunt  <oliver@apple.com>

        Reviewed by Gavin Barraclough.

        Regression: crash enumerating properties of an object with getters or setters
        https://bugs.webkit.org/show_bug.cgi?id=30948

        Add test for enumerating getters and setters.

        * fast/js/for-in-cached-expected.txt:
        * fast/js/script-tests/for-in-cached.js:
        (forIn5):

2009-10-29  Erik Arvidsson  <arv@chromium.org>

        Reviewed by Eric Seidel.

        Make links mouse focusable only on GTK and QT.

        Links are now always mouse focusable on GTK and QT. On other platforms
        the link needs a tabIndex or it needs to be contentEditable.

        https://bugs.webkit.org/show_bug.cgi?id=26856

        * fast/events/click-focus-anchor-expected.txt:
        * fast/events/click-focus-anchor.html:
        * platform/gtk/fast/events/click-focus-anchor-expected.txt: Added.
        * platform/mac/fast/events/click-focus-anchor-expected.txt: Removed.
        * platform/qt/fast/events/click-focus-anchor-expected.txt: Added.

2009-10-29  Jonathan Dixon  <joth@chromium.org>

        Reviewed by Eric Seidel.

        Add expected files for GTK and QT builds, for test text-input-webkit-radius.html
        Expected fils collected from buildbot:
        http://build.webkit.org/results/Qt%20Linux%20Release/r50286%20(3257)/fast/css/
        http://build.webkit.org/results/GTK%20Linux%20Release/r50286%20(5308)/fast/css/

        * platform/gtk/fast/css/text-input-with-webkit-border-radius-expected.txt: Added.
        * platform/qt/fast/css/text-input-with-webkit-border-radius-expected.txt: Added.

2009-10-29  Dan Bernstein  <mitz@apple.com>

        Updated Tiger-specific result now that Tiger matches current behavior. A Tiger-specific
        result is still needed because of the difference in Thai fonts.

        * platform/mac-tiger/fast/text/atsui-multiple-renderers-expected.txt:

2009-10-29  Dan Bernstein  <mitz@apple.com>
