@@ -1,0 +1,9 @@
+Regression test for https://bugs.webkit.org/show_bug.cgi?id=30904. This test passes if it doesn't crash.
+
+On success, you will see a series of "PASS" messages, followed by "TEST COMPLETE".
+
+
+PASS successfullyParsed is true
+
+TEST COMPLETE
+
