@@ -1,0 +1,29 @@
+<html>
+<head>
+<link rel="stylesheet" href="../js/resources/js-test-style.css">
+<script src="../js/resources/js-test-pre.js"></script>
+</head>
+<body onload='load(1)'>
+<p id="description"></p>
+<div id="console"></div>
+
+<script>
+description("Regression test for https://bugs.webkit.org/show_bug.cgi?id=30904. This test passes if it doesn't crash.");
+
+// Force a stack-overflow in the console.log
+function load(n) {
+    try {
+      load(n+1);
+    } catch(e) {
+      try {
+        console.log();
+      } catch (g) {
+      }
+    }
+}
+
+var successfullyParsed = true;
+</script>
+<script src="../js/resources/js-test-post.js"></script>
+</body>
+</html>
